@@ -213,6 +213,19 @@ Checking in src/msw/window.cpp;
 new revision: 1.381; previous revision: 1.380
 done
 
+24. Fix wxLocale::Init to try xx_YY.utf8 on systems where xx_YY fails
+(presumably RedHat; do it in Unicode mode only)
+
+See: Patch [ 766893 ]
+Checking in intl.cpp;
+/pack/cvsroots/wxwindows/wxWindows/src/common/intl.cpp,v  <--  intl.cpp
+new revision: 1.97; previous revision: 1.96
+done
+Checking in changes.txt;
+/pack/cvsroots/wxwindows/wxWindows/docs/changes.txt,v  <--  changes.txt
+new revision: 1.297; previous revision: 1.296
+done
+
 
 TODO for 2.4 (items that are not backports)
 ===========================================
